force-app/main/default/objects/FinanceBalanceSnapshot/fields/blng__CreditGLAccount__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditGLAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit GL Account</label>
    <referenceTo>blng__GLAccount__c</referenceTo>
    <relationshipLabel>Finance Balance Snapshots (Credit GL Account)</relationshipLabel>
    <relationshipName>CreditGLAccountFinanceBalanceSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>