force-app/main/default/objects/FinanceBalanceSnapshot/fields/blng__FinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__FinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Finance Balance Snapshots</relationshipLabel>
    <relationshipName>FinancePeriodFinanceBalanceSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>