force-app/main/default/objects/FinanceBalanceSnapshot/fields/blng__GLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__GLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Finance Balance Snapshots</relationshipLabel>
    <relationshipName>GLTreatmentFinanceBalanceSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>